<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filterLinearLayout"
    style="?android:attr/buttonBarStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone">

    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="?attr/homeAsUpIndicator"
        android:onClick="onMenuBack"
        android:textColor="@color/textColorPrimary"
        android:visibility="visible" />

    <Button
        android:id="@+id/histogramEqualizationButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:onClick="onHistogramEqualization"
        android:text="@string/histogram"
        android:textColor="@color/textColorPrimary" />

    <Button
        android:id="@+id/colorPickerButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="3dp"
        android:onClick="onColorPicker"
        android:text="@string/color_picker"
        android:textColor="@color/textColorPrimary" />

    <Button
        android:id="@+id/hueColorize"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="3dp"
        android:onClick="onHistogram"
        android:text="@string/Shade"
        android:textColor="@color/textColorPrimary" />

    <Button
        android:id="@+id/greyscaleButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="3dp"
        android:onClick="onGreyscale"
        android:text="@string/greyscale"
        android:textColor="@color/textColorPrimary" />

    <Button
        android:id="@+id/sepiaButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="3dp"
        android:onClick="onSepia"
        android:text="@string/sepia"
        android:textColor="@color/textColorPrimary" />

    <Button
        android:id="@+id/negativeButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="3dp"
        android:onClick="onNegative"
        android:text="@string/negative"
        android:textColor="@color/textColorPrimary" />

    <Button
        android:id="@+id/sketchButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="3dp"
        android:onClick="onSketch"
        android:text="@string/sketch"
        android:textColor="@color/textColorPrimary" />
</LinearLayout>